# mzgb

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  demo.sh  flake.nix  logsnap_wrapper.sh  pyproject.toml  requirements.txt  setup.cfg  start_agents.sh
.github/workflows/: publish.yml
.windsurf/: senior_review.yaml
agents/: README.md  abel.py  autonomous_loop.py  biruk.py  bootstrap.py  config.py  dawit.py  endalk.py  fix_rooms.py  liya.py  llm.py  matrix_client.py  natnael.py  selam.py  task_reader.py  tigist.py
benchmarks/: gen_logs.py  results.md  run.sh
docs/: index.html  mzgb-v0.3.0-demo.cast
logsnap/: __main__.py  buffer.py  cli.py  filters.py  follow.py  parser.py  renderer.py  summary.py
matrix/: docker-compose.yml  homeserver.yaml  log.yaml
mzgb/: __main__.py  buffer.py  cli.py  drain.py  filters.py  matchers.py  parser.py  renderer.py  summary.py
openspec/changes/logsnap/: README.md  design.md  proposal.md  tasks.md
openspec/changes/logsnap/specs/context-buffer/: spec.md
openspec/changes/logsnap/specs/filter-engine/: spec.md
openspec/changes/logsnap/specs/follow-mode/: spec.md
openspec/changes/logsnap/specs/output-renderer/: spec.md
openspec/changes/logsnap/specs/stream-engine/: spec.md
openspec/changes/logsnap/specs/summary-mode/: spec.md
openspec/changes/mzgb/: design.md  proposal.md  tasks.md
openspec/changes/mzgb-v02/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/mzgb/specs/log-parser/: spec.md
openspec/changes/mzgb/specs/output-renderer/: spec.md
openspec/changes/mzgb/specs/summary-mode/: spec.md
pm/: DASHBOARD.md
snap/: snapcraft.yaml
tasks/: QUEUE.json  README.md  backend.md  cli.md  distribute.py  features.md  infra.md  queue_manager.py  testing.md
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_pipeline.py
tests/unit/: test_buffer.py  test_drain.py  test_filters.py  test_follow.py  test_matchers.py  test_parser.py  test_summary.py
