[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["logsnap*"]

[project]
name = "logsnap"
version = "0.1.0"
description = "Smart CLI for filtering and navigating very large log files"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
logsnap = "logsnap.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/mukesudo/logsnap"
Repository = "https://github.com/mukesudo/logsnap"
Issues = "https://github.com/mukesudo/logsnap/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["logsnap"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
