[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mzgb*"]

[project]
name = "mzgb"
version = "0.1.0"
description = "Smart CLI for filtering and navigating very large log files"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
mzgb = "mzgb.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/mukesudo/mzgb"
Repository = "https://github.com/mukesudo/mzgb"
Issues = "https://github.com/mukesudo/mzgb/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["mzgb"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 79
