[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mzgb*"]

[project]
name = "mzgb"
version = "0.2.0"
description = "Fast CLI for filtering very large log files by level, pattern, and time range"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
keywords = ["log", "filter", "cli", "grep", "logging", "devops", "tail"]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
mzgb = "mzgb.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/mukesudo/mzgb"
Repository = "https://github.com/mukesudo/mzgb"
Issues = "https://github.com/mukesudo/mzgb/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["mzgb"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 79
