[metadata]
name = logsnap
version = 0.1.0
description = Smart CLI for filtering and navigating very large log files
python_requires = >=3.9

[options]
packages = find:
install_requires =
    click>=8.1.0
    rich>=13.0.0
    python-dateutil>=2.8.0

[options.entry_points]
console_scripts =
    logsnap = logsnap.cli:main

[options.extras_require]
dev =
    pytest>=7.4
    pytest-cov>=4.1
